Fix regression on chrome scrollbar

--- a/styles/partials/flex.scss
+++ b/styles/partials/flex.scss
@@ -26,7 +26,7 @@
 }
 
 .budgie-flex-container-parent {
-  ::-webkit-scrollbar {
+  &::-webkit-scrollbar {
     display: none;
   }
   overflow: -moz-scrollbars-none;
